<resources>
    <string name="app_name">To Do</string>
    <string name="splash_screen_logo">Splash screen logo</string>
    <string name="splash_screen_credit">Splash screen credit</string>
    <string name="to_do_list">To Do List</string>
    <string name="floating_action_button">Floating action button</string>
    <string name="tasks">Tasks</string>
    <string name="settings">Settings</string>
    <string name="add_new_task">Add New Task</string>
    <string name="select_date">Select Task Date :</string>
    <string name="add_task">Add Task</string>
    <string name="task_title">Task Title</string>
    <string name="task_details">Task Details</string>
    <string name="title_is_required">*Title is required</string>
    <string name="details_is_required">*Details is required</string>
    <string name="required">*Required</string>
    <string name="select_task_time">Select Task Time :</string>
    <string name="date_is_required">*Date is required</string>
    <string name="time_is_required">*Time is required</string>
    <string name="language">Language</string>
    <string name="mode">Mode</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="edit_task">Edit Task</string>
    <string name="save_changes">Save Changes</string>
    <string name="delete">Delete</string>
    <string name="done">Done!</string>
    <string-array name="language_options">
        <item>English</item>
        <item>Arabic</item>
    </string-array>
    <string-array name="mode_options">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
</resources>