<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_edit_task">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/blue"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        style="@style/calendar_background_color"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.85">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_title"
                style="@style/add_task_bottom_sheet_title_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:text="@string/edit_task" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_title"
                android:paddingVertical="16dp"
                android:textDirection="locale"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title_edt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ellipsize="end"
                    android:inputType="text"
                    android:maxLines="2"
                    android:textDirection="locale" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/details_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_details"
                android:paddingVertical="16dp"
                android:textDirection="locale"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/details_edt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ellipsize="end"
                    android:inputType="text"
                    android:maxLines="3"
                    android:textDirection="locale" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_select_date"
                style="@style/add_task_bottom_select_date_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:text="@string/select_date"
                android:textDirection="locale" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_selected_date_value"
                style="@style/add_task_bottom_selected_date_value_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="10dp"
                tools:text="27-6-2021" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_select_time"
                style="@style/add_task_bottom_select_date_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:text="@string/select_task_time"
                android:textDirection="locale" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_selected_time_value"
                style="@style/add_task_bottom_selected_date_value_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="10dp"
                tools:text="10:30 AM" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="100dp"
                android:paddingHorizontal="20dp"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:text="@string/save_changes"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:elevation="10dp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>